@@ -15,19 +15,32 @@
  * @filesource
  */
 
-class_exists('FormFieldDate') or require(dirname(__FILE__).'/FormFieldDate.php');
+class_exists('ModelBehavior') or require dirname(__FILE__).'/ModelBehavior.php';
 
 /**
+ * Behavior
+ * 
  * @package ephFrame
- * @subpackage ephFrame.lib.component.Form.Field
+ * @subpackage ephFrame.lib.model.behavior
  * @author Marcel Eichner // Ephigenia <love@ephigenia.de>
- * @since 20.02.2009
+ * @since 2010-03-14
  */
-class FormFieldDateTime extends FormFieldDate 
+class VersionableBehavior extends ModelBehavior
 {
 	/**
-	 * Override parents date/time format with hours and seconds on it
-	 * @var string
+	 * DB Action Field Mappings
+	 * @var array(string)
 	 */
-	public $format = '%x %H:%M';
+	protected $defaultConfig = array(
+		'fieldname' => 'revision',
+	);
+	
+	public function beforeUpdate()
+	{
+		$fieldname = $this->config[$this->model->name]['fieldname'];
+		if ($model->hasField($fieldname)) {
+			$this->model->set($fieldname, $this->model->get($fieldname) + 1);
+		}
+		return parent::beforeUpdate();
+	}
 }
